--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,17 @@ body {
 }
 
 .photo-croissant {
-  display: block;
-  margin: auto;
-  width: 600px;
+max-width: 80%;
+display: block;
+border-radius: 10px;
+margin: 30px auto;
 }
 
-.links {
- margin-top: 40px;
+footer {
+  text-align: center;
+}
+
+footer a {
+  margin: 0 10px;
+  color:#0f998b;
 }
